# 3lab-oop

./: CMakeLists.txt
include/: Array.h  Figure.h  Octagon.h  Pentagon.h
src/: Figure.cpp  main.cpp
tests/: test.cpp
